# jupyter-lab-progress

./: .gitignore  CLAUDE.md  PYPI_TRUSTED_PUBLISHING.md  README.md  enhancements.md  example_lab.ipynb  example_lab_comprehensive.ipynb
.github/workflows/: python-publish.yml
jupyter-lab-progress/: DIRECT_PYPI_UPLOAD.md  README.md  UPLOAD_GUIDE.md  debug_cell.md  debug_mark_partial.py  pyproject.toml  reinstall.sh
jupyter-lab-progress/examples/: .data_science_pipeline_lab_progress.json  .data_science_workshop_progress.json  01_progress_tracking.ipynb  02_display_utilities.ipynb  03_validation_utilities.ipynb  04_complete_mongodb_lab.ipynb  04_complete_mongodb_lab.ipynb.bak  05_session_resume.ipynb  06_inline_hints_tips.ipynb  07_auto_graded_checkpoints.ipynb  08_progress_analytics.ipynb  README.md  environment.yml  getting_started.ipynb  notebook_cells_extracted.txt  requirements.txt  setup_checker.py
jupyter-lab-progress/jupyter_lab_progress/: __init__.py  _version.py  display.py  progress.py  validator.py
jupyter-lab-progress/scripts/: build.sh  test_install.py
jupyter-lab-progress/tests/: test_session_resume.py
jupyter-lab-utils/: DEPLOYMENT.md  PUBLISH_CHECKLIST.md  pyproject.toml  simple_test.py
jupyter-lab-utils/examples/: getting_started.ipynb
lab_utils/: README.md  setup.cfg
lab_utils/lab_utils/: __init__.py  display.py
