
[metadata]
name = lab-utils
version = 0.1.0
author = Your Name
description = Utility package for lab progress, validation, and display in Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/lab-utils
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich
    ipython
    pandas
